--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Byr3scr4pp3rs
+title: Byt3scr4pp3rs
 email: bytescrappersv2@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is Byt3scr4pp3rs official team of IIIT Lucknow.
